fix: responsive layout fixes for mobile horizontal scroll
Make '.page' and 'footer > div' width responsive and optimize for iOS Safari.

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 main {
@@ -49,7 +50,8 @@ footer > div {
   align-items: center;
   gap: 2px;
   padding: 0 10px;
-  width: 575px;
+  max-width: 575px;
+  width: 100%;
 }
 
 footer > div > a {
@@ -80,8 +82,10 @@ footer > div > a:last-of-type {
 .page {
   margin-bottom: var(--body-margin-bottom);
   margin-left: var(--body-margin-left);
+  margin-right: var(--body-margin-right);
   margin-top: var(--body-margin-top);
-  width: 575px;
+  max-width: 575px;
+  width: 100%;
 }
 
 .not-found {
@@ -94,9 +98,4 @@ footer > div > a:last-of-type {
   font-size: 16px;
 }
 
-@media (width <= 600px) {
-  .not-found,
-  .page {
-    margin-right: var(--body-margin-right);
-  }
-}
+
